Updated to 2025 in heading and support for openhab 5

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -191,6 +191,7 @@
     <module>org.openhab.binding.haywardomnilogic</module>
     <module>org.openhab.binding.hccrubbishcollection</module>
     <module>org.openhab.binding.hdanywhere</module>
+	<module>org.openhab.binding.hdl</module>
     <module>org.openhab.binding.hdpowerview</module>
     <module>org.openhab.binding.helios</module>
     <module>org.openhab.binding.heliosventilation</module>
